More Bug fixes
Calendar and Emoji picker scrollbar fix

--- a/Themes/DuskCord.theme.css
+++ b/Themes/DuskCord.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"DuskCordP","description":"A dark and sleek discord","author":"Jadeonking","version":"3.5.2"}*//{}
+//META{"name":"DuskCordP","description":"A dark and sleek discord","author":"Jadeonking","version":"3.5.3"}*//{}
 /* **DISCLAIMER** Switches and Small User List Designed by Beard Design */
 
 /* If you would like the old red borders back use a CSS editor such as Atom or Notepad++
@@ -819,6 +819,10 @@ background:#191919!important
 .emoji-picker {
 background:#191919!important;
 border:none
+}
+
+.emoji-picker .scroller::-webkit-scrollbar-track {
+background:none!important
 }
 
 .emote-menu-inner {
@@ -6330,6 +6334,22 @@ border-radius:0!important;
 
 .react-datepicker .react-datepicker__month>.react-datepicker__week:last-of-type .react-datepicker__day {
 border-radius:0!important;
+}
+
+.theme-dark .theme-light .ui-calendar-picker .react-datepicker, .theme-light .ui-calendar-picker .react-datepicker {
+background-color:#191919
+}
+
+.theme-dark .theme-light .ui-calendar-picker .react-datepicker__header, .theme-light .ui-calendar-picker .react-datepicker__header {
+background-color:#191919
+}
+
+.theme-dark .ui-calendar-picker .react-datepicker__day-name {
+color:#ccc!important
+}
+
+.theme-dark .ui-calendar-picker .react-datepicker__day.react-datepicker__day--selected:after {
+background-color:#4B0082!important
 }
 
 /* Invite Modal */
